--- a/VectorEditor.UI/MainWindow.axaml
+++ b/VectorEditor.UI/MainWindow.axaml
@@ -1,42 +1,200 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="VectorEditor.UI.MainWindow"
-        Title="VectorEditor.UI">
-    <Grid ShowGridLines="True" Margin="5" ColumnDefinitions="50, *, 50" RowDefinitions="50, *">
-        <!-- TOP RIGHT -->
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Spacing="10">
-             <Button Content="🟰"/>
-        </StackPanel>
-        <!-- TOP -->
-        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Spacing="10">
-            <Slider Name="VolumeSlider" Minimum="1" Maximum="100" Value="10" TickFrequency="1" IsSnapToTickEnabled="True" Width="200" HorizontalAlignment="Left" ValueChanged="SizeSlider"/>
-            <Button Content="🟥" Tag="0" Click="OnSelectColor"/>
-            <Button Content="🟦" Tag="1" Click="OnSelectColor"/>
-            <Button Content="🟨" Tag="2" Click="OnSelectColor"/>
-            <Button Content="🟩" Tag="3" Click="OnSelectColor"/>
-            <Button Content="⬛" Tag="4" Click="OnSelectColor"/>
-            <Button Content="⬜" Tag="5" Click="OnSelectColor"/>
-            <Button Content="🟧" Tag="6" Click="OnSelectColor"/>
-            <Button Content="🟫" Tag="7" Click="OnSelectColor"/>
-        </StackPanel>
-        <!-- TOOL BAR ON LEFT -->
-        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Spacing="10">
-            <Button Content="A" Tag="0" Click="OnSelectTool"/>
-            <Button Content="B" Tag="1" Click="OnSelectTool"/>
-            <Button Content="C" Tag="2" Click="OnSelectTool"/>
-            <Button Content="D"/>
-            <Button Content="E"/>
-            <Button Content="F"/>
-            <Button Content="G"/>
-            <Button Content="H"/>
-            <Button Content="I"/>
-        </StackPanel>
-        <!-- CANVAS -->
-        <Border Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="2" Margin="0,10">
-            <Canvas x:Name="MyDrawingCanvas" Background="White" PointerPressed="OnCanvasPointerPressed" PointerMoved="OnCanvasPointerMoved" PointerReleased="OnCanvasPointerReleased"></Canvas>
-        </Border>
+<Window
+    x:Class="VectorEditor.UI.MainWindow"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:material="using:Material.Icons.Avalonia"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Vector Editor"
+    WindowStartupLocation="CenterScreen"
+    WindowState="Maximized">
+    <Grid>
+        <Grid
+            ColumnDefinitions="50,*,250"
+            RowDefinitions="50,*"
+            ShowGridLines="True">
+            <Button
+                Grid.Row="0"
+                Grid.Column="0"
+                Click="ToggleMenu">
+                <material:MaterialIcon
+                    Width="20"
+                    Height="20"
+                    Foreground="White"
+                    Kind="Menu" />
+            </Button>
+            <StackPanel
+                Grid.Row="1"
+                Grid.Column="0"
+                Orientation="Vertical">
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="Navigation" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="Select" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="Brush" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="VectorLine" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="VectorSquare" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="CircleOutline" />
+                </Button>
+                <Button Click="SelectTool">
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="ShapePolygonPlus" />
+                </Button>
+            </StackPanel>
+            <StackPanel
+                Grid.Row="0"
+                Grid.Column="1"
+                Orientation="Horizontal">
+                <Button>
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="Undo" />
+                </Button>
+                <Button>
+                    <material:MaterialIcon
+                        Width="20"
+                        Height="20"
+                        Foreground="White"
+                        Kind="Redo" />
+                </Button>
+                <Button Click="SelectColor">
+                    ⬜
+                </Button>
+                <Button Click="SelectColor">
+                    ⬛
+                </Button>
+                <Button Click="SelectColor">
+                    🟥
+                </Button>
+                <Button Click="SelectColor">
+                    🟩
+                </Button>
+                <Button Click="SelectColor">
+                    🟦
+                </Button>
+                <Button Click="SelectColor">
+                    🟧
+                </Button>
+            </StackPanel>
+            <Border
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="10"
+                BorderBrush="Gray"
+                BorderThickness="2">
+                <Canvas x:Name="MyDrawingCanvas" Background="White" />
+            </Border>
+            <StackPanel
+                Grid.Row="1"
+                Grid.Column="2"
+                Orientation="Vertical">
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    FontSize="24"
+                    FontWeight="Bold"
+                    Text="Layers" />
+                <Border
+                    Padding="10"
+                    Background="#2D2D30"
+                    BorderBrush="#3E3E42"
+                    BorderThickness="3">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock
+                            Width="195"
+                            HorizontalAlignment="Center"
+                            FontSize="12"
+                            Text="Layers" />
+                        <Button Click="ToggleLayer">
+                            <material:MaterialIcon
+                                Width="20"
+                                Height="20"
+                                Foreground="White"
+                                Kind="Eye" />
+                        </Button>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
+        </Grid>
+
+        <Grid
+            x:Name="MenuOverlay"
+            Background="#AA000000"
+            ColumnDefinitions="320,*"
+            IsVisible="False"
+            RowDefinitions="50,*">
+            <Button
+                Grid.Row="0"
+                Grid.Column="0"
+                Click="ToggleMenu">
+                <material:MaterialIcon
+                    Width="20"
+                    Height="20"
+                    Foreground="White"
+                    Kind="Menu" />
+            </Button>
+            <Border
+                Grid.Row="1"
+                Grid.Column="0"
+                Width="300"
+                Height="400"
+                HorizontalAlignment="Center"
+                Background="#2D2D30"
+                BorderBrush="Gray"
+                BorderThickness="1"
+                CornerRadius="5">
+
+                <StackPanel Spacing="10">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="20"
+                        FontWeight="Bold"
+                        Foreground="White"
+                        Text="Main Menu" />
+                    <Button HorizontalAlignment="Stretch" Content="Save Project" />
+                    <Button HorizontalAlignment="Stretch" Content="Load Project" />
+                    <Button HorizontalAlignment="Stretch" Content="Export (SVG)" />
+                    <Button HorizontalAlignment="Stretch" Content="Export (JPG)" />
+                    <Button HorizontalAlignment="Stretch" Content="Export (PNG)" />
+                </StackPanel>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
