--- a/VectorEditor.UI/MainWindow.axaml
+++ b/VectorEditor.UI/MainWindow.axaml
@@ -184,6 +184,20 @@
                             <Button Background="Magenta" Classes="Colors" />
                             <Button Background="HotPink" Classes="Colors" />
                         </WrapPanel>
+                        
+                        <StackPanel Orientation="Horizontal" Spacing="8" Margin="0,10,0,0">
+                            <ToggleButton x:Name="StrokeModeButton"
+                                          Content="Stroke"
+                                          IsChecked="True"
+                                          Click="ColorModeChanged"/>
+
+                            <ToggleButton x:Name="FillModeButton"
+                                          Content="Fill"
+                                          Click="ColorModeChanged"/>
+
+                        </StackPanel>
+
+                        
                         <StackPanel Orientation="Horizontal" Margin="0,5">
                             <TextBlock>R:</TextBlock>
                             <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorR" TextChanged="Color_InputChange">0</TextBox>
@@ -191,6 +205,12 @@
                             <TextBox Classes="Small" Margin="3,0,3,0" Name="InputColorG" TextChanged="Color_InputChange">0</TextBox>
                             <TextBlock>B:</TextBlock>
                             <TextBox Classes="Small" Margin="3,0,0,0" Name="InputColorB" TextChanged="Color_InputChange">0</TextBox>
+                            <Panel Name="ColorPreview"
+                                    Width="17" Height="17"
+                                    Background="Black"
+                                    Margin="15,0,0,0"
+                                    />
+
                             <Panel Classes="Colors" Margin="15,0,0,0" Width="17" Height="17" Background="Black"
                                    Name="SelectedColor" />
                         </StackPanel>
