--- a/VectorEditor.UI/CanvasWidget.axaml
+++ b/VectorEditor.UI/CanvasWidget.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:material="using:Material.Icons.Avalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="VectorEditor.UI.LayerWidget">
+             x:Class="VectorEditor.UI.CanvasWidget">
     <UserControl.Styles>
         <Style Selector="Button.LayerButton">
             <Setter Property="Background" Value="Transparent" />
