--- a/VectorEditor.UI/MainWindow.axaml
+++ b/VectorEditor.UI/MainWindow.axaml
@@ -56,12 +56,12 @@
                 <TextBlock Text="PROJECT" FontWeight="Bold" Margin="15,10" Opacity="0.6" />
                 <Button Classes="MenuLink" Click="NewProject">New Project</Button>
                 <Button Classes="MenuLink" Click="OpenFile">Open File</Button>
-                <Button Classes="MenuLink" Click="SaveFile">Save</Button>
+                <Button Content="Save" Click="SaveFile" Classes="MenuLink"/>
                 <Separator Margin="10" Opacity="0.2" />
                 <TextBlock Text="EXPORT" FontWeight="Bold" Margin="15,10" Opacity="0.6" />
                 <Button Content="Export PNG" Click="ExportPng" Classes="MenuLink"/>
                 <Button Content="Export JPG" Click="ExportJpg" Classes="MenuLink"/>
-                <Button Content="Save / Export SVG" Click="SaveFile" Classes="MenuLink"/>
+                <Button Content="Export SVG" Click="ExportSvg" Classes="MenuLink"/>
             </StackPanel>
         </SplitView.Pane>
 
